# indy7-mpc

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  eepos_g_batch.npy  gato_controller.py  gato_controller_dev  gato_mpc_indy7.ipynb  gato_mpc_indy7_fig8.ipynb  gato_mpc_indy7_sample.ipynb  pin_mpc_indy7.ipynb  plot_stats.py  points.npy  pointstake2.npy  pyproject.toml  run.py  run_mpc.py  stat_analysis.ipynb
config/: exp_apr21.yaml
mujoco_sim/: CMakeLists.txt  package.xml
mujoco_sim/include/: viz.h
mujoco_sim/src/: sim_node.cpp  viz.cpp
notebooks/: gato_fig8_tracking.ipynb  gato_mpc_indy7.ipynb  gato_mpc_indy7_fig8.ipynb  pin_mpc_indy7.ipynb  stat_analysis.ipynb
scripts/: make.sh
src/: batch_solver.py  batchctrl_gato.py  gato_batch_solver.py  gato_controller.py  gato_mpc.py  gato_mpc_batch.py  gato_mpc_batch_sample.py  gato_node.py  oracle_node.py  osqp_mpc.py  osqp_sqp.py  plotter_node.py  realtime_plotter.py  utils.py
src/mpc/mpc/: batch_solver.py  mpc_node.py  reference_traj.py
src/osqp/: osqp_mpc.py  osqp_solver.py
src/sim/: CMakeLists.txt  package.xml
src/sim/launch/: sim.launch.py
stats/16/: 041954_dts.npy  041954_ee_positions.npy  041954_ee_ref_positions.npy  041954_joint_positions.npy  041954_solve_times.npy  041954_tracking_errors.npy
stats/32/: 035043_dts.npy  035043_ee_positions.npy  035043_joint_positions.npy  035043_solve_times.npy  035043_tracking_errors.npy
stats/64/: 041825_dts.npy  041825_ee_positions.npy  041825_ee_ref_positions.npy  041825_joint_positions.npy  041825_solve_times.npy  041825_tracking_errors.npy
stats/single/: 033848_dts.npy  033848_ee_positions.npy  033848_joint_positions.npy  033848_solve_times.npy  033848_tracking_errors.npy
tools/: clean.sh  docker.sh  make-noviz.sh  make-viz.sh  sim.sh
